# ai-code-review-assistant

./: .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  DEPLOYMENT.md  Dockerfile  QUICKSTART.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.sh
.github/workflows/: cd.yml  ci.yml  code-quality.yml  docker.yml  security.yml
config/: standards.yaml
src/ai_code_review/: __init__.py  config.py  main.py
src/ai_code_review/ai/: __init__.py  llm_client.py  prompts.py  review_engine.py
src/ai_code_review/gitlab/: __init__.py  client.py  models.py  webhooks.py
src/ai_code_review/utils/: __init__.py  logger.py  metrics.py
tests/: conftest.py  test_gitlab_client.py  test_llm_client.py  test_metrics.py  test_review_engine.py
